# fungine-test-app

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build-web-assets.sh  shell.html
res/: Grass.fbx  Islands.fbx  PalmTree_small.fbx  PalmTree_straight.fbx  config.txt
res/shaders/: FoliageFragmentShader.shader  FoliageVertexShader.shader  StaticFragmentShader.shader  StaticVertexShader.shader  TerrainFragmentShader.shader  TerrainVertexShader.shader  TreeFragmentShader.shader  TreeVertexShader.shader
res/shaders/guiShaders/: GuiFragmentShader.shader  GuiVertexShader.shader  TextFragmentShader.shader  TextVertexShader.shader
res/shaders/treeShaders/: TreeFragmentShader.shader  TreeShadowFragmentShader.shader  TreeShadowVertexShader.shader  TreeVertexShader.shader
src/: Main.cpp  ModelLoadingTest.cpp  NatureRenderingTest.cpp  SkeletalAnimationTest.cpp  TestProgram.h
src/controllers/: CameraController.cpp  CameraController.h
